--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@sweetalert2/themes": "^5.0.11",
         "autoprefixer": "^10.4.8",
+        "flowbite": "^1.8.1",
         "postcss": "^8.4.14",
         "sweetalert2": "^11.4.24",
         "tailwindcss": "^3.1.7"
